  - Fixed a problem saving prefs when using PHP 4.1
  - Russian, Thai, Swedish, Dutch and French update.
  - Changed configure invocation from bash to sh. (Bug #496752)
  - Changed conf.pl invocation from '#/usr/bin/perl' to
    '#!/usr/bin/env perl' to help people who have perl somewhere
    else. (Bug #496753)
  - Fixed sorting of folder list, bug #497181
  	
Version 1.2.1 -- 25 December 2001
---------------------------------

  - Fixed the bug that kept the create, delete, and rename sections
    from appearing in the folders page (#496604)
  - Fixed the motd bug not allowing ' (#496616)
  - Sorting of addressbook_search fixed, thanks to the patch of
    Cor Bosman (xs4all)

Version 1.2.0 -- 25 December 2001
---------------------------------

  - Collapsible Folders
  - The Paginator!!!
  - Hundreds of UI Tweaks
  - Message Drafts
  - Rewrite of much of the options pages
  - Multiple identities
  - Reply Citations
  - Better Attachment Handling
  - Integration of Several Plugins into Core Code (including xmailer,
    attachment_common, paginator, priority, printer_friendly, sqclock)
  - Ability to mark messages as Read/Unread
  - New themes (including a Christmas theme, and several changing themes)
  - Rewrite of much of the options pages code
  - Improved support for newer versions of PHP
  - Message lists can be shown with alternating colors for easier reading
  - Can include/exclude yourself when using the "Reply All"
  - Message highlighting comes with dozens more easily accessable colors.
  - Option to set the "Priority" of the message(Normal/High/Low)
  - Now able to show all messages of an inbox at the same time.
  - Cleanup of the paginator code, improving display style
  - Cleanup of configuration file code, a bit
  - Introduction of sent_subfolders plugin as Official Plugin
  - Bugfixes..and more Bugfixes!


***************************************************************
*** Squirrelmail Development Series 1.1 and 1.1 Pre-Releases ***